--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -6,8 +6,8 @@
     <thead>
       <tr>
         <td>#</td>
-        <td>Title</td>
-        <td>Description</td>
+        <td>喜欢的电影</td>
+        <td>电影评论</td>
       </tr>
     </thead>
     <tbody>
