--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-12">
   <div class="group">
-    <%= link_to("New group", new_group_path, class: "btn btn-primary pull-right") %>
+    <%= link_to("New imove", new_group_path, class: "btn btn-primary pull-right") %>
   </div>
   <table class="table table-hover">
     <thead>
@@ -17,8 +17,8 @@
         <td><%= link_to(group.title, group_path(group)) %></td>
         <td><%= group.description %></td>
         <td>
-          <%= link_to("Edit", edit_group_path(group), class: "btn btn-sm btn-default")%>
-          <%= link_to("Delete", group_path(group),    class: "btn btn-sm btn-default",
+          <%= link_to("编辑", edit_group_path(group), class: "btn btn-sm btn-default")%>
+          <%= link_to("删除", group_path(group),    class: "btn btn-sm btn-default",
                        method: :delete, data: { confirm: "Are you sure?" } )%>
                      </td>
                    </tr>
