--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -2,24 +2,5 @@
   <h2>新增评论版</h2>
 
   <hr>
-  <%= form_for @group do |f| %>
-
-  <% if @group.errors.any? %>
-  <ul>
-    <% @group.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-    <% end %>
-    </ul>
-    <% end %>
-
-  电影名称
-  <%= f.text_field :title %>
-  <br>
-  电影评论
-  <br>
-  <%= f.text_area :description %>
-  <br>
-
-  <%= f.submit "Submit", :disbale_with => 'Submitting...' %>
-  <% end %>
+  <%= render "form" %>
 </div>
