implement my posts

--- a/app/views/account/groups/index.html.erb
+++ b/app/views/account/groups/index.html.erb
@@ -5,10 +5,10 @@
     <thead>
       <tr>
         <th> # </th>
-        <th> Title </th>
-        <th> Description </th>
-        <th> Post Count </th>
-        <th> Last Update </th>
+        <th> 电影名称 </th>
+        <th> 评论内容 </th>
+        <th> 点评次数 </th>
+        <th> 最后更新 </th>
         </tr>
         </thead>
 
